--- a/.gitignore
+++ b/.gitignore
@@ -123,6 +123,7 @@ prefs/shelves/shelf_PhoenixFD.mel
 prefs/shelves/shelf_Polygons_User.mel
 prefs/shelves/shelf_SLiB.mel
 prefs/shelves/uvShelf_Custom.mel
+prefs/shelves/shelf_Deadline.mel
 prefs/synColorConfig.xml
 prefs/synColorConfig.xml.lock
 prefs/synColorFileRules.xml
